@@ -134,9 +134,7 @@ JAR and YAML files:
 
 ```shell
 java -XX:MinRAMPercentage=50 -XX:MaxRAMPercentage=80 \
-    --add-opens=java.base/java.lang=ALL-UNNAMED \
-    --add-opens=java.base/java.net=ALL-UNNAMED \
-    -jar gateway-ha.jar server gateway-config.yml
+    -jar gateway-ha.jar gateway-config.yml
 ```
 
 ### Helm
